horizontale scrollbar fix #18

--- a/public/sprint-11.css
+++ b/public/sprint-11.css
@@ -450,7 +450,7 @@ header {
     }
 
     .svg-error {
-        @media screen and (min-width: 1000px) {
+        @media screen and (min-width: 1200px) {
             img {
                 height: 517px;
                 width: 455px;
@@ -466,7 +466,7 @@ header {
         "button";
 
         @media screen and (min-width: 1000px) {
-            margin-left: 5em;
+            margin-left: 9em;
         }
 
         .error-code {
@@ -476,7 +476,7 @@ header {
             line-height: var(--line-height-title1-error);
             width: 7ch;
 
-            @media screen and (min-width: 1000px) {
+            @media screen and (min-width: 1200px) {
                 font-size: 125px;
             }
         }
@@ -489,7 +489,7 @@ header {
             color: var(--text-primary-input-color);
             margin-bottom: .5em;
 
-            @media screen and (min-width: 1000px) {
+            @media screen and (min-width: 1200px) {
                 font-size: 40px;
             }
         }
